--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^13.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "viem": "~0.3.35",
     "wagmi": "~1.0.5"
   },
