--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/node": "^18.16.12",
     "@types/react": "^18.2.6",
+    "@types/react-google-recaptcha": "^2.1.5",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.15.0",
     "eslint-config-next": "^13.4.3",
